istio-gateway/team-istio-routes/retail-banking/gateway-virtualservice.yaml
# apiVersion: networking.istio.io/v1
# kind: Gateway
# metadata:
#   name: retail-banking-gateway
#   namespace: retail-banking-team
# spec:
#   # This must match the label on retail-banking-istio-ingressgateway pods.
#   selector:
#     app: retail-banking-istio-ingressgateway
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - finance.hellocloud.io
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: retail-banking-routes
  namespace: retail-banking-team
spec:
  hosts:
  - finance.hellocloud.io
  # Connect this VirtualService to the Gateway above.
  gateways:
  - retail-banking-gateway
  http:
  # Kong rewrites /retail-banking/accounts to /accounts before traffic arrives here.
  - match:
    - uri:
        prefix: /accounts
    # Send matched traffic to the retail-banking app Service.
    route:
    - destination:
        host: account-svc.retail-banking-team.svc.cluster.local
        port:
          number: 8082
